made console thread daemon in client so it can be shut down when main thread is dead